<resources>
    <string name="app_name">S4S</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="seller">Seller</string>
    <string name="seller1">Name of the book</string>
    <string name="seller2" />
    <string name="seller3" />
    <string name="pub">Publisher</string>
    <string name="image">front</string>
    <string name="declare">I hereby declare that the details furnished above are true and correct to the best of my knowledge</string>
    <string name="button">Submit</string>
    <string name="pop">your response have been successfully recorded</string>
    <string name="POP">OK</string>
    <string name="sale">Sale</string>
    <string name="sa">Expected Price</string>
    <string name="ss">SELLER</string>
    <string name="s4">ADDRESS</string>
    <string name="s1">Locality</string>
    <string name="s">City</string>
    <string name="sd">State</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="register">Register</string>
    <string name="terms">By clicking register, I agree to your </string>
    <string name="terms2"><u>Terms</u></string>
    <string name="alreadymember">Already a member?</string>
    <string name="loginnow">Login Now</string>
    <string name="login">Login</string>
    <string name="notmember">Don\'t have an account?</string>
    <string name="forgotpassword"><u>Forgot Password?</u></string>
    <string name="facebook_app_id">561557834349920</string>
    <string name="fb_login_protocol_scheme">fb561557834349920</string>
    <string name="signup"><b>Sign Up</b></string>
    <string name="bookpalace"><b>Book Palace</b></string>
    <string name="createaccount"><b>Create account.</b> New to Book Palace?</string>
    <string name="loginalreadymember"><b>Login.</b> Already a customer?</string>


    <string name="ssss">House Number, Street, Colony</string>

    <string name="sell">Author\'s Name</string>
    <string name="str">Edition</string>
    <string name="ss1">SELLER</string>
    <string name="popu">Add for Sale</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tnc">TNC</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_old">Old</string>
    <string name="title_activity_seller1">Seller1</string>
    <string name="title_activity_wishlist1">Wishlist1</string>
    <string name="title_activity_addtocart">addtocart</string>

    <string name="dialog_message1">Confirm</string>
    <string name="dialog_message2">Cancel</string>
    <string name="dialog_title">Payment</string>
    <string name="selleerrr">By clicking SUBMIT, you agree to our terms and condition</string>
    <string-array name="country_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="title_activity_logout1">Logout1</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_profile1">Profile1</string>
    <string name="title_activity_profile_edit1">ProfileEdit1</string>
    <string name="title_activity_comp_sci">CompSci</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyChyJMCyA2r1vzgcAJ47xzENofbdBzN84E</string>
    <string name="pp">Place</string>
    <string name="dit">Title</string>
    <string name="default_web_client_id2">558672191416–4o4rl426sjesiqnb8g419poj1dol3ivt.apps.googleusercontent.com</string>
    <string name="dis">Info</string>
    <string name="title_activity_regist">Regist</string>




    <string name="option_get_place">Get place</string>


</resources>
