<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e2e0e0"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/almendra_bold"
                android:text="@string/bookpalace"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="?android:attr/dividerHorizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="Welcome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checkedButton="@id/radio_create_account"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radio_create_account"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/createaccount" />

                        <EditText
                            android:id="@+id/name_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="8dp"
                            android:background="@drawable/back"
                            android:drawableStart="@drawable/nameicon"
                            android:drawableLeft="@drawable/nameicon"
                            android:drawablePadding="5dp"
                            android:hint="@string/name"
                            android:inputType="textPersonName|textCapWords"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray" />


                        <EditText
                            android:id="@+id/email_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="8dp"
                            android:background="@drawable/back"
                            android:drawableStart="@drawable/emailicon"
                            android:drawableLeft="@drawable/emailicon"
                            android:drawablePadding="5dp"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray" />

                        <EditText
                            android:id="@+id/phone_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="8dp"
                            android:background="@drawable/back"
                            android:drawableStart="@drawable/phoneicon"
                            android:drawableLeft="@drawable/phoneicon"
                            android:drawablePadding="5dp"
                            android:hint="@string/phone"
                            android:inputType="number"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray" />

                        <EditText
                            android:id="@+id/password_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="8dp"
                            android:background="@drawable/back"
                            android:drawableStart="@drawable/passwordicon"
                            android:drawableLeft="@drawable/passwordicon"
                            android:drawablePadding="5dp"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray" />


                        <EditText
                            android:id="@+id/confirm_password_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="8dp"
                            android:background="@drawable/back"
                            android:drawableStart="@drawable/passwordicon"
                            android:drawableLeft="@drawable/passwordicon"
                            android:drawablePadding="5dp"
                            android:hint="@string/confirm"
                            android:inputType="textPassword"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray" />


                        <Button
                            android:id="@+id/register_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="8dp"
                            android:background="@drawable/roundedbutton"
                            android:text="@string/signup"
                            android:textColor="@drawable/button_text" />

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="2dp"
                            android:layout_marginTop="16dp"
                            android:background="?android:attr/dividerHorizontal" />

                        <RadioButton
                            android:id="@+id/radio_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/loginalreadymember" />
                    </RadioGroup>


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/terms_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/terms"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="8dp"
                    android:onClick="openTerms"
                    android:text="@string/terms2"
                    android:textColor="@android:color/holo_blue_light" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
