<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/flipkart"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/almendra_bold"
                android:text="@string/bookpalace"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="?android:attr/dividerHorizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="Welcome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checkedButton="@id/radio_login"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radio_create_account"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/createaccount" />

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="2dp"
                            android:layout_marginTop="8dp"
                            android:background="?android:attr/dividerHorizontal" />

                        <RadioButton
                            android:id="@+id/radio_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:onClick="onRadioButtonClicked"
                            android:text="@string/loginalreadymember" />


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/layout_login_email"
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="16dp"
                            android:hint="@string/email">

                            <EditText
                                android:id="@+id/email_login_text_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/back"
                                android:drawableStart="@drawable/emailicon"
                                android:drawableLeft="@drawable/emailicon"
                                android:drawablePadding="5dp"
                                android:inputType="textEmailAddress"
                                android:textColor="@android:color/black"
                                android:textColorHint="@android:color/darker_gray" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/layout_login_password"
                            style="@style/TextInputLayoutStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="16dp"
                            android:hint="@string/password"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="@android:color/darker_gray">

                            <EditText
                                android:id="@+id/password_login_text_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/back"
                                android:drawableStart="@drawable/passwordicon"
                                android:drawableLeft="@drawable/passwordicon"
                                android:drawablePadding="5dp"
                                android:inputType="textPassword"
                                android:textColor="@android:color/black"
                                android:textColorHint="@android:color/darker_gray" />
                        </android.support.design.widget.TextInputLayout>

                        <Button
                            android:id="@+id/login_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/roundedbutton"
                            android:text="@string/login"
                            android:textColor="@drawable/button_text" />

                        <TextView
                            android:id="@+id/forgot_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="16dp"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center_horizontal"
                            android:text="@string/forgotpassword"
                            android:textColor="@android:color/holo_blue_light" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true">

                            <TextView
                                android:id="@+id/tvText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:text="or"
                                android:textColor="@color/button_default" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="16dp"
                                android:layout_toLeftOf="@id/tvText"
                                android:background="@color/button_default" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="16dp"
                                android:layout_toRightOf="@id/tvText"
                                android:background="@color/button_default" />

                        </RelativeLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <com.facebook.login.widget.LoginButton xmlns:facebook="http://schemas.android.com/apk/res-auto"
                                android:id="@+id/login_button_fb"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:layout_marginTop="30dp"
                                android:layout_marginRight="16dp"
                                android:layout_marginBottom="16dp"
                                facebook:com_facebook_login_text="Continue with Facebook" />

                            <com.google.android.gms.common.SignInButton
                                android:id="@+id/sign_in_button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="16dp"
                                android:layout_marginBottom="16dp" />


                        </LinearLayout>

                    </RadioGroup>


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</ScrollView>


